postgres_manager/tests/snapshots/browser_tests__backup_metadata.snap
---
source: tests/browser_tests.rs
expression: backup
---
BackupMetadata {
    key: "test-snapshot-1.sql.gz",
    size: 10485760,
    last_modified: 2025-04-12T06:19:29Z,
}
