postgres_manager/tests/snapshots/browser_tests__popup_state_confirm_cancel.snap
---
source: tests/browser_tests.rs
expression: confirm_cancel
---
ConfirmCancel(
    BackupMetadata {
        key: "test-snapshot-1.sql.gz",
        size: 10485760,
        last_modified: 2025-04-12T06:19:29Z,
    },
    0.5,
    1048576.0,
)
