postgres_manager/tests/snapshots/browser_tests__postgres_config.snap
---
source: tests/browser_tests.rs
expression: pg_config
---
PostgresConfig {
    host: Some(
        "localhost",
    ),
    port: Some(
        5432,
    ),
    username: Some(
        "postgres",
    ),
    password: Some(
        "password",
    ),
    use_ssl: false,
    db_name: Some(
        "postgres",
    ),
}
